# reddit-cli

./: .sosrc  LICENSE  reddit-cli.cabal  stack.yaml
app/: Main.hs  Model.hs  View.hs
src/Brick/: Auto.hs
src/Brick/Widgets/: Tree.hs  WrappedString.hs
src/Data/List/: Zipper.hs
src/Data/Text/: Paragraph.hs
test/: Spec.hs
