name:                reddit-cli
version:             0.1.0.0
homepage:            http://github.com/mitchellwrosen/reddit-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
copyright:           2015 Mitchell Rosen
category:            Console
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brick.Auto
                     , Brick.Widgets.Tree
  other-modules:       Data.List.Zipper
  build-depends:       base >= 4.7 && < 5
                     , auto
                     , brick
                     , containers
                     , lens
                     , semigroups
                     , transformers
                     , vty
  default-language:    Haskell2010
  ghc-options:         -Wall

executable reddit-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , auto
                     , brick
                     , data-default
                     , lens
                     , reddit
                     , reddit-cli
                     , text
                     , text-zipper
                     , transformers
                     , vector
                     , vty
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite reddit-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reddit-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/reddit-cli
